# hk-policy-rag

./: .gitignore  README.md  build_index.py  hk_policy_chunks.json  main.py  pyproject.toml  requirements.txt  run_pdf_chunker.py  streamlit_app.py
docs/: ground_truth.json  result_template.csv  scoring_rubric.md  test_questions.json
