[project]
name = "hk-policy-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.12.0",
    "htbuilder>=0.9.0",
    "langchain>=1.2.15",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
